<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/role_background"
tools:context=".professor.ExamOptions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/professorExamViewTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:text="@string/exam_options_expl"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="24sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_filled_with_color_bg"
                    android:text="@string/see_and_edit_exam"
                    android:onClick="singleExamView"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_filled_with_color_bg"
                    android:text="@string/questions_list"
                    android:onClick="questionsList"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_filled_with_color_bg"
                    android:text="@string/add_question"
                    android:onClick="addQuestion"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_filled_with_color_bg"
                    android:text="@string/delete_exam"
                    android:onClick="deleteExam"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_filled_with_color_bg"
                    android:text="@string/add_user_to_exam"
                    android:onClick="addStudentToExam"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_filled_with_color_bg"
                    android:text="@string/students_list"
                    android:onClick="seeStudentToExamList"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_filled_with_color_bg"
                    android:text="@string/files_groups_list"
                    android:onClick="seeMaterials"/>


            </LinearLayout>
        </ScrollView>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>