<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/role_background"
    tools:context=".admin.UserAdministration">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:text="@string/user_administration_exp"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/professors_list"
                android:onClick="allProfessors"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/students_list"
                android:onClick="allStudents"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/admins_list"
                android:onClick="allAdmins"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/users_list"
                android:onClick="allUsers"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/add_new_user"
                android:onClick="addNewUserButton"/>

        </LinearLayout>




</RelativeLayout>