<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/role_background"
    tools:context=".professor.NewAnswer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center"
            android:text="@string/add_answer_expl"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/answerContentEditTxt"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/et_bg"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/id_answer_correct"
            android:textSize="24sp"/>

        <Spinner
            android:id="@+id/answerCorrectSpinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center"
            android:onClick="addNewAnswerToList"/>

    </LinearLayout>

</LinearLayout>