<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/role_background"
    tools:context=".admin.AddNewMaterial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center"
            android:text="@string/add_new_material"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/name_of_file"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/newMaterialNameEditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/is_required_question"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center_vertical"/>

        <Spinner
            android:id="@+id/materialRequiredSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/add_photo"
            android:onClick="addPhoto"/>


    </LinearLayout>

</LinearLayout>