<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/role_background"
    tools:context=".PasswordReset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="24dp"
                android:text="@string/password_reset"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                android:text="@string/link_will_be_sent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/resetPasswordEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/button_filled_bg"
                android:text="@string/ok"
                android:onClick="reset"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>