<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/role_background"
    tools:context=".student.MainStudentActivity">


    <LinearLayout
        android:id="@+id/adminMainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/helloStudentTxtView"
                android:layout_width  ="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Hello Student!"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="28sp"/>

            <TextView
                android:layout_width  ="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/main_student"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="22sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/exams_list"
                android:onClick="studentExamsList"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/results_list"
                android:onClick="studentResultList"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_filled_with_color_bg"
                android:text="@string/profile_view"
                android:onClick="studentProfileView"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>