<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/role_background"
    tools:context=".admin.EditUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/imgViewLogo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="@string/admin_edit_user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="48dp"
            />
        <RelativeLayout
            android:id="@+id/relativeLayoutEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgViewLogo">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_edit"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/first_name"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                    <EditText
                        android:id="@+id/adminEditFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif-light"

                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/last_name"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                    <EditText
                        android:id="@+id/adminEditLastName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif-light"

                        />


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/students_group"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />

                    <EditText
                        android:id="@+id/adminEditGroup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:inputType="none"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


        <Button
            android:id="@+id/butRegister"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="32dp"
            android:layout_alignParentBottom="true"
            android:text="@string/edit"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@drawable/button_filled_bg"
            android:onClick="confirmEdit"
            />

    </RelativeLayout>

</RelativeLayout>